objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>All the Bank details are stored,</description>
        <label>Bank Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AXIS</fullName>
                </value>
                <value>
                    <fullName>HDFC BANK</fullName>
                </value>
                <value>
                    <fullName>IDBI</fullName>
                </value>
                <value>
                    <fullName>SBI</fullName>
                </value>
                <value>
                    <fullName>SBH</fullName>
                </value>
                <value>
                    <fullName>KOTAK MAHINDRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>All the categories are stored</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>EFS</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Gold Loan</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charges_Dynamic_Component__c</fullName>
        <description>This stores the Charges - Dynamic Component value</description>
        <label>Charges - Dynamic Component</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charges_Dynamic_Component_percent__c</fullName>
        <description>This field stores the Charges - Dynamic Component% value.</description>
        <label>Charges - Dynamic Component%</label>
        <precision>11</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Charges_Fixed_Component__c</fullName>
        <description>This field stores the Charges - Fixed Component</description>
        <label>Charges - Fixed Component</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charges_Fixed_Component_percent__c</fullName>
        <description>This field stores the Charges -Fixed Component % value</description>
        <label>Charges -Fixed Component %</label>
        <precision>11</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Charges_Percent_Component__c</fullName>
        <description>This field stores the Charges - Percent Component value</description>
        <label>Charges - Percent Component</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Charges_Type__c</fullName>
        <description>This field specifies the Charges type</description>
        <label>Charges Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disbursement_Mode__c</fullName>
        <description>This field stores the Disbursement Mode</description>
        <label>Disbursement Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BANK</fullName>
                </value>
                <value>
                    <fullName>CASH</fullName>
                </value>
                <value>
                    <fullName>CHEQUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMI_Post_15__c</fullName>
        <description>This field stores the emi post value</description>
        <label>EMI Post 15</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMI_Pre_15__c</fullName>
        <description>This field stores the emi pre value</description>
        <label>EMI Pre 15</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gold_Base_Price_gm__c</fullName>
        <description>This field stores the Gold Base Price/gm value</description>
        <label>Gold Base Price/gm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Net__c</fullName>
        <description>This is to select Gross/Net</description>
        <label>Gross/Net</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Actual_Frequency__c</fullName>
        <description>This filed is to select the frequency of the interest.</description>
        <label>Interest Actual Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <description>This field is to select the loan amount</description>
        <label>Loan Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Possible_Opportunity__c</fullName>
        <description>This field stores the Max Possible Opportunity</description>
        <label>Max Possible Opportunity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Grace_Period_in_Days__c</fullName>
        <description>This field stores the Maximum Grace Period in Days</description>
        <label>Maximum Grace Period in Days</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Installment__c</fullName>
        <description>This field stores the Maximum Installment.</description>
        <label>Maximum Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Interest_Rate__c</fullName>
        <description>This is to store Maximum Interest Rate</description>
        <label>Maximum Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Loan_Amount__c</fullName>
        <description>This is to store the Maximum Loan Amount</description>
        <label>Maximum Loan Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Term__c</fullName>
        <description>This field stores Maximum Term</description>
        <label>Maximum Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Min_Possible_Opportunity__c</fullName>
        <description>This stores Min Possible Opportunity</description>
        <label>Min Possible Opportunity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Grace_Period_in_Days__c</fullName>
        <description>This stores Minimum Grace Period in Days</description>
        <label>Minimum Grace Period in Days</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Installment__c</fullName>
        <description>This stores Minimum Installment</description>
        <label>Minimum Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Interest_Rate__c</fullName>
        <description>This stores the Minimum Interest Rate</description>
        <label>Minimum Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Loan_Amount__c</fullName>
        <description>This stores Minimum Loan Amount</description>
        <label>Minimum Loan Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Term__c</fullName>
        <description>This stores Minimum Term</description>
        <label>Minimum Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Cash_Flow_120_EMI_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This stores Net Cash Flow &gt; 120% EMI required</description>
        <label>Net Cash Flow &gt; 120% EMI required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Classification__c</fullName>
        <description>This stores Product Classification</description>
        <label>Product Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>This specifes the Product Code</description>
        <externalId>true</externalId>
        <label>Product Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Expiry_Date__c</fullName>
        <description>This stores the Product Expiry Date</description>
        <label>Product Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_of_Interest__c</fullName>
        <description>This stores Rate of Interest</description>
        <label>Rate of Interest</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <description>This stores Tenure</description>
        <label>Tenure</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <externalId>true</externalId>
        <label>test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>